use correct logo inline on the index header
remove unnessesary page-specific style on a hero unit — the inline-block
element at the bottom was causing a scrollbar — adding a bottom margin
removes the scrollbar

--- a/source/stylesheets/_index.scss
+++ b/source/stylesheets/_index.scss
@@ -1,4 +1,11 @@
 .index {
+  .hero-headline {
+    .logoWithoutPeriod {
+      height: 2.8rem;
+      padding-top: .75rem;
+    }
+  }
+
   .services {
     position: relative;
 
@@ -18,9 +25,5 @@
 
   .additional {
     overflow: auto;
-  }
-
-  .mantra {
-    overflow: hidden;
   }
 }
