--- a/source/stylesheets/_quote.scss
+++ b/source/stylesheets/_quote.scss
@@ -39,7 +39,7 @@
   font-family: $header-font;
   font-size: .8rem;
   font-weight: bold;
-  margin-top: 3rem;
+  margin: 3rem 0 1px;
   padding: .4rem 3rem;
   text-transform: uppercase;
 }
